# bot-ticelli

./: Cargo.toml  Makefile  README.md  config.toml  rustfmt.toml
.github/workflows/: build.yml  release.yml
migrations/2020-10-17-014813_install_uuid/: down.sql
migrations/2020-10-17-014914_add_win/: down.sql  mod.rs  up.sql
migrations/2020-10-26-012837_add_reset_to_win/: down.sql  mod.rs  up.sql
migrations/2020-10-26-091336_add_participation/: down.sql  mod.rs  up.sql
migrations/2020-10-26-153327_add_image_url_to_participation/: down.sql  mod.rs  up.sql
migrations/2020-11-02-125808_remove_participation_image/: down.sql  mod.rs  up.sql
migrations/2020-11-02-130311_add_game/: down.sql  mod.rs  up.sql
migrations/2020-11-02-211519_add_default_game/: down.sql  up.sql
migrations/2025-05-02-003133_add_win_score_and_participation_warning/: down.sql  up.sql
migrations/2025-05-07-103826_add_participation_updated_at/: down.sql  up.sql
src/: bot.rs  cache.rs  config.rs  cron.rs  error.rs  extensions.rs  main.rs  messages.rs  models.rs  paginate.rs  schema.rs
src/cmd/: admin.rs  mod.rs  player.rs
