[package]
name = "bot-ticelli"
version = "1.4.4"
authors = ["Tuetuopay <tuetuopay@me.com>"]
edition = "2024"
resolver = "3"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", default-features = false, features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
futures = "0.3"
itertools = "0.14"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
opentelemetry-jaeger = "0.22"
rand = "0.9"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.9"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_derive = "1.0"
serenity = "0.11"
uuid = { version = "1", features = ["v4"] }
